# autonomous-data-analyst-agent

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: base.py  critic.py  planner.py  schemas.py  sql_generator.py  summarizer.py
backend/app/api/: rate_limit.py  routes.py  schemas.py
backend/app/db/: engine.py  executor.py  guardrails.py  sessions.py
backend/app/llm/: client.py  groq_client.py  ollama_client.py
backend/app/orchestrator/: pipeline.py  trace.py
backend/app/prompts/: critic.txt  planner.txt  sql_generator.txt  summarizer.txt
backend/app/rag/: embeddings.py  retriever.py
backend/app/rag/corpus/: guidance.yaml  query_examples.yaml
backend/tests/: conftest.py  fakes.py  test_critic.py  test_guardrails.py  test_rate_limit.py  test_readonly_enforcement.py  test_retry_budget.py  test_sql_generator.py
db/migrations/: 001_data_tables.sql  002_readonly_role.sql  003_sessions.sql  004_rag_chunks.sql
db/seed/: seed_mock_data.py
frontend/: .env.example  README.md  index.html  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Chat.tsx  ColdStartBanner.tsx  MessageBubble.tsx  TracePanel.tsx
frontend/src/hooks/: useColdStartGuard.ts
frontend/src/types/: trace.ts
scripts/: build_rag_index.py  export_from_delta.py  run_migrations.py  set_agent_password.py
