[project]
name = "adaa-backend"
version = "0.1.0"
description = "Autonomous Data-Analyst Agent — multi-agent NL-to-SQL system over a ride-sharing data snapshot"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Only needed for scripts/export_from_delta.py — the one utility that reads the
# upstream Delta Lake tables. Deliberately optional so the deployed backend
# never carries Delta/Arrow dependencies.
export = [
    "deltalake>=0.17",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
