[project]
name = "adaa-backend"
version = "0.1.0"
description = "Autonomous Data-Analyst Agent — multi-agent NL-to-SQL system over a ride-sharing data snapshot"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "sqlglot>=23",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# Only needed for scripts/export_from_delta.py — the one utility that reads the
# upstream Delta Lake tables. Deliberately optional so the deployed backend
# never carries Delta/Arrow dependencies.
export = [
    "deltalake>=0.17",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
